--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">OnboardingApp</string>
+    <string name="app_name">Supermarket App</string>
+    <string name="homepage">Homepage!</string>
+    <string name="receipts">View your receipts here!</string>
+    <string name="profile">View your profile here!</string>
 </resources>
