--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
 
     <string name="loading_failed">Failed to load</string>
     <string name="loading">Loading</string>
+    <string name="product_image">Product image</string>
+
+    <string name="popular_products">Popular products</string>
+    <string name="see_more">See more</string>
 </resources>
