ReceiptsScreen updates, receipts timeline, payment bubbles and more!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
 
     <string name="popular_products">Popular products</string>
     <string name="see_more">See more</string>
+    <string name="shopping_trip">Your shopping trips</string>
 </resources>
