Added foldable support and some screens!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="product_details">Product details</string>
     <string name="all_products">All products</string>
     <string name="back_button">Back</string>
+    <string name="details_fold">Select a product to see its details</string>
 </resources>
