--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="details_fold">Select a product to see its details</string>
     <string name="coming_soon">Coming soon!</string>
     <string name="not_found">No product found</string>
+    <string name="search_products">Search products</string>
 </resources>
