AR implementation on product details page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="coming_soon">Coming soon!</string>
     <string name="not_found">No product found</string>
     <string name="search_products">Search products</string>
+    <string name="a_r">AR</string>
 </resources>
