--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="not_found">No product found</string>
     <string name="search_products">Search products</string>
     <string name="a_r">AR</string>
+    <string name="obj_detection">Object deetection</string>
 </resources>
