--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,10 @@
     <string name="not_found">No product found</string>
     <string name="search_products">Search products</string>
     <string name="a_r">AR</string>
-    <string name="obj_detection">Object deetection</string>
+    <string name="obj_detection">Object detection</string>
+    <string name="prod_info">Product information</string>
+    <string name="about_product">About this product</string>
+    <string name="documentation">Documentation</string>
+    <string name="see_more_web">See more on web page</string>
+    <string name="more_like_this">More like this</string>
 </resources>
